feat: create Redis client

--- a/.golangci.reference.yml
+++ b/.golangci.reference.yml
@@ -8,7 +8,7 @@ run:
     - vendor
     - var
     - tmp
-    - .cache
+    - .memory_database
     - .idea                # Каталоги для пропуска
   skip-files:
     - \.pb\.go$            # Регулярные выражения для пропуска файлов
